*SVN*

* Added ActionController#cookies[] as a reader for @cookies that'll return the value of the cookie instead of the cookie object itself.
  NOTE: If you were using the old accessor, this could potentially break your code -- if you expect a full cookie object!

* Added the opportunity to defined method_missing on a controller which will handle all requests for actions not otherwise defined #223 [timb]

* Fixed AbstractRequest#remote_ip for users going through proxies - Patch #228 [Eric Hodel]

* Added Request#ssl? which is shorthand for @request.protocol == "https://"

* Added the choice to call form_tag with no arguments (resulting in a form posting to current action) [bitsweat]

* Upgraded to Builder 1.2.1

* Added :module as an alias for :controller_prefix to url_for and friends, so you can do redirect_to(:module => "shop", :controller => "purchases")
  and go to /shop/purchases/

* Added support for controllers in modules through @params["module"].

* Added reloading for dependencies under cached environments like FastCGI and mod_ruby. This makes it possible to use those environments for development.
  This is turned on by default, but can be turned off with ActionController::Base.reload_dependencies = false in production environments.

  NOTE: This will only have an effect if you use the new model, service, and observer class methods to mark dependencies. All libraries loaded through
  require will be "forever" cached. You can, however, use ActionController::Base.load_or_require("library") to get this behavior outside of the new
  dependency style.

* Added that controllers will automatically require their own helper if possible. So instead of doing:

    class MsgController < AbstractApplicationController
      helper :msg
    end
    
  ...you can just do:
  
    class MsgController < AbstractApplicationController
    end

* Added dependencies_on(layer) to query the dependencies of a controller. Examples:
  